change code of cors config