@@ -1,8 +1,9 @@
 package in.sp.main.config;
 
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.Ordered;
+import org.springframework.core.annotation.Order;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
@@ -11,22 +12,21 @@ import java.util.Arrays;
 import java.util.List;
 
 @Configuration
+@Order(Ordered.HIGHEST_PRECEDENCE) // ✅ VERY IMPORTANT
 public class CorsConfig {
-
-    @Value("${FRONTEND_URL}")
-    private String frontendUrls;
 
     @Bean
     public CorsFilter corsFilter() {
 
         CorsConfiguration config = new CorsConfiguration();
 
-        // ✅ Allow credentials (JWT / cookies)
+        // ✅ Allow credentials (JWT)
         config.setAllowCredentials(true);
 
-        // ✅ Support multiple origins (split by comma)
-        List<String> allowedOrigins = Arrays.asList(frontendUrls.split(","));
-        config.setAllowedOrigins(allowedOrigins);
+        // ✅ IMPORTANT: Add your frontend URL directly
+        config.setAllowedOrigins(List.of(
+                "https://service-hub-five-rho.vercel.app"
+        ));
 
         // ✅ Allow all headers
         config.setAllowedHeaders(Arrays.asList(
@@ -36,7 +36,7 @@ public class CorsConfig {
                 "Authorization"
         ));
 
-        // ✅ Allow HTTP methods
+        // ✅ Allow all methods
         config.setAllowedMethods(Arrays.asList(
                 "GET",
                 "POST",
@@ -45,7 +45,10 @@ public class CorsConfig {
                 "OPTIONS"
         ));
 
-        // ✅ Apply config to all endpoints
+        // ✅ Cache preflight response (optional but good)
+        config.setMaxAge(3600L);
+
+        // ✅ Apply to all APIs
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
 
